Fixed some issues on mobile and added article and footer to html, and wrapper top-page with header tags

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
 
 /* Main first page items */
 .main-container-top {
+    height: 100vh;
     display: grid;
     grid-template-columns: 2fr 1fr auto 1fr 2fr;
     grid-template-rows: auto;
@@ -36,7 +37,6 @@ body {
 }
 
 .top-image {
-    height: 100vh;
     background-image: url("./2.jpg");
 }
 
@@ -141,11 +141,19 @@ a.link:active {
     .main-md-desc {
         font-size: 2.5em;
     }
+
+    .main-social-links-con {
+        align-self: start;
+    }
 }
 
 @media only screen and (min-width: 769, max-width: 920px) {
     .main-name {
         font-size: 10em;
         -webkit-text-stroke-width: 1px;
-    }   
+    }  
+
+    .main-social-links-con {
+        align-self: start;
+    } 
 }
